# symset

./: Cargo.toml  README.md  pyproject.toml  rustfmt.toml
.github/workflows/: ci.yml
src/: lib.rs
src/symset/: __init__.py  _core.pyi
symset/: __init__.py  _core.pyi
tests/: .ruff.toml  test_empty.py  test_empty_set.py  test_nothing.py  test_special_sets.py  test_universe.py
